--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build:css": "postcss styles/styles.css -o public/stylesheets/tailwind.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "tailwindcss": "^3.4.1"
   }
 }
