Implement JWT auth, add Pug templates

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URI=mongodb+srv://antoninanovak:Chv02809@atlascluster.lwm9hpj.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=my_jwt_secret
+MONGO_URI=mongodb+srv://antonina_novak:VV6C$UKX3TZ434x@cluster0.lngqkzf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
