--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "node-fetch": "^2.6.7",
     "nodemon": "^3.1.0",
     "pug": "^3.0.2",
+    "socket.io": "^4.7.4",
     "validator": "^13.11.0",
-    "winston": "^3.11.0",
+    "winston": "^3.12.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
