--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.7",
     "nodemon": "^3.1.0",
     "pug": "^3.0.2",
+    "redis": "^4.6.13",
     "socket.io": "^4.7.4",
     "validator": "^13.11.0",
     "winston": "^3.12.0",
