--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
+    "express-prom-bundle": "^7.0.0",
+    "grafana": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "newrelic": "^11.12.0",
     "node-fetch": "^2.6.7",
     "nodemon": "^3.1.0",
+    "prom-client": "^15.1.0",
     "pug": "^3.0.2",
     "redis": "^4.6.13",
     "socket.io": "^4.7.4",
